# rig-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  install.sh  pyproject.toml  rig.yaml
.github/workflows/: ci.yml  dependency-review.yml  leftover-grep.yml  pr-title-lint.yml  secret-scan.yml
docs/: config-schema.md  gen_svgs.py
docs/specs/: 2026-07-15-stack-presets.md  rig-cross-harness-provisioning.md  rig-github-settings.md  rig-subagents-provisioning.md
riglib/: __init__.py  __main__.py  _version.py  areas.py  catalog.py  cli.py  codex_update.py  config.py  config_schema.py  config_web.py  config_web_service.py  core_bare.py  detect.py  doctor.py  drift.py  errors.py  gh_ship_alias.py  github_actions.py  github_auth.py  github_browser.py  github_ghas.py  github_merge.py  github_ruleset.py  harness_skills.py  install.py  layers.py  logging.py  missing_target.py  paths.py  permissions.py  plan.py  project_tools.py  schedule.py  schema.py  setup_wizard.py  spotlight.py  stack.py  state.py  tg_ctl.py  tmux.py  (+2 more)
riglib/actions/: __init__.py  fsutil.py  runner.py
riglib/evolve/: __init__.py  cache.py  git_index.py  history.py  model.py  projects.py  service.py  structure.py  symbols.py  web.py
riglib/evolve/providers/: __init__.py  git.py  rig.py  sverklo.py
riglib/stats/: __init__.py  aggregate.py  command.py  model.py  taxonomy.py
riglib/stats/render/: __init__.py  _util.py  json_out.py  tui.py  web.py
riglib/stats/sources/: __init__.py  _shellutil.py  base.py  claude_code.py  codex.py  gemini.py  opencode.py
riglib/tui/: __init__.py  app.py
schema/: rig.schema.json
scripts/: install-smoke-precommit.sh  smoke-precommit-hook.sh
tests/: conftest.py  smoke.sh  test_actions_drift.py  test_agents_md.py  test_apply_preview.py  test_autonomous_mode.py  test_catalog_plan.py  test_cleanroom_e2e.py  test_cleanroom_helpers.py  test_cli.py  test_config.py  test_config_getset.py  test_config_schema.py  test_config_web.py  test_core_bare.py  test_detect.py  test_doctor_state.py  test_errors.py  test_evolve.py  test_evolve_history.py  test_evolve_projects.py  test_evolve_providers.py  test_evolve_symbols.py  test_execpolicy.py  test_gh_graphql_provisioning.py  test_gh_ship_alias.py  test_github_merge.py  test_github_ruleset.py  test_github_settings.py  test_gitignore.py  test_global_excludes.py  test_install.py  test_link_self_symlink.py  test_linters.py  test_missing_target.py  test_models_schedule.py  test_permissions.py  test_pi_extension.py  test_plan_errors.py  test_project_tools.py  (+16 more)
