[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rig-cli"
version = "0.4.0"
description = "rig — the dev-environment umbrella driver: set up a repo from a committed rig.yaml by applying agent-tools content (skills, hooks, CI gates, MCP)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex Mextner" }]
# pyyaml is the only hard runtime dep (config parse/serialize). It is imported lazily so
# `rig --help` and `rig doctor` still run if it is missing; doctor flags it as a gap.
dependencies = ["pyyaml"]

[project.optional-dependencies]
# The interactive wizard + the `rig stats show --format tui` rich report. Headless
# `rig init --config ... --yes`, `rig apply`, `rig status`, `rig doctor`, and the
# json/web stats outputs all work WITHOUT these; the stats TUI degrades to plain text
# when rich is absent (it is lazy-imported), so this stays purely optional.
tui = ["textual>=0.50", "rich>=13"]
test = ["pytest"]
# NOTE — `rig config-web`'s lifecycle (run/start/stop/status/enable/disable + launchd/systemd
# autostart) is delegated to the SHARED `agenttools-service` manager (an agent-tools nested lib,
# which in turn needs `agenttools-daemon`). It is deliberately NOT declared as a dependency here:
# neither lib is published to PyPI (they live under the agent-tools checkout at
# `lib/agenttools_service` / `lib/agenttools_daemon`), so a versioned requirement would make
# `uv run` / `pip install` unresolvable for everyone. config-web LAZY-imports it, so `rig --help`,
# `rig apply`, `rig status`, etc. all run without it; only the config-web lifecycle verbs need it
# and they fail closed with an actionable MissingDepError (exit 127) carrying the install command:
#   pip install -e <agent-tools>/lib/agenttools_daemon <agent-tools>/lib/agenttools_service

[project.scripts]
rig = "riglib.cli:main"

[project.urls]
Homepage = "https://github.com/alex-mextner/rig-cli"

# Explicit package list (NOT setuptools flat-layout autodiscovery, which would silently
# pull stray top-level dirs into the wheel). actions/ and tui/ are SUBpackages of riglib.
[tool.setuptools.packages.find]
include = ["riglib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
