[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rig-cli"
version = "0.20.0"
description = "rig — the dev-environment umbrella driver: set up a repo from a committed rig.yaml by applying agent-tools content (skills, hooks, CI gates, MCP)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex Mextner" }]
# Hard runtime deps. All imported lazily inside the handlers that need them, so `rig --help`
# and `rig doctor` stay fast and still run even on a partially-broken env (doctor flags a gap).
#   • pyyaml   — config parse/serialize (the rig.yaml cascade).
#   • textual  — the interactive `rig init` setup wizard. It is a CORE dep (not an optional
#     `[tui]` extra) so EVERY canonical install — `pipx install rig-cli`, `uv tool install
#     rig-cli`, `pip install rig-cli` — brings the wizard. `rig init` from a terminal launches
#     it with NO extra install step and NO "go install textual yourself" hint.
#   • rich     — the `rig stats show --format tui` report (degrades to plain text when absent).
dependencies = ["pyyaml", "textual>=0.50", "rich>=13"]

[project.optional-dependencies]
test = ["pytest", "tomli; python_version < '3.11'"]
# NOTE — `rig config-web`'s lifecycle (run/start/stop/status/enable/disable + launchd/systemd
# autostart) is delegated to the SHARED `agenttools-service` manager (an agent-tools nested lib,
# which in turn needs `agenttools-daemon`). It is deliberately NOT declared as a dependency here:
# neither lib is published to PyPI (they live under the agent-tools checkout at
# `lib/agenttools_service` / `lib/agenttools_daemon`), so a versioned requirement would make
# `uv run` / `pip install` unresolvable for everyone. config-web LAZY-imports it, so `rig --help`,
# `rig apply`, `rig status`, etc. all run without it; only the config-web lifecycle verbs need it
# and they fail closed with an actionable MissingDepError (exit 127) carrying the install command:
#   pip install -e <agent-tools>/lib/agenttools_daemon <agent-tools>/lib/agenttools_service

[project.scripts]
rig = "riglib.cli:main"

[project.urls]
Homepage = "https://github.com/alex-mextner/rig-cli"

# Explicit package list (NOT setuptools flat-layout autodiscovery, which would silently
# pull stray top-level dirs into the wheel). actions/ and tui/ are SUBpackages of riglib.
[tool.setuptools.packages.find]
include = ["riglib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
